--- a/tox.ini
+++ b/tox.ini
@@ -14,5 +14,6 @@ deps =
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
+    django19: Django>=1.9
 commands=
     python manage.py test
