--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ install:
 script:
   - tox
 env:
+  - TOXENV=py27-django15
+  - TOXENV=py27-django16
+  - TOXENV=py27-django17
   - TOXENV=py27-django18
+  - TOXENV=py27-django19
